fix close icon size, wrap with button

--- a/src/components/VideoOverlay/VideoOverlay.scss
+++ b/src/components/VideoOverlay/VideoOverlay.scss
@@ -1,3 +1,14 @@
+.VideoOverlayClose {
+  width: 48px;
+}
+
+.CloseButton {
+  width: 48px;
+  height: 48px;
+  border: 0;
+  background: #ffffff00;
+}
+
 @media (min-width: 768px) {
   .modal-content {
     border-radius: 0;
@@ -49,8 +60,8 @@
     margin: 0 !important;
     background-color: #ffffff !important;
   }
-  .VideoOverlayClose {
-    cursor: pointer;
+  .VideoOverlayClose,
+  .CloseButton {
     position: fixed;
     z-index: 1000;
     top: 1.3vw;
@@ -89,8 +100,8 @@
     background-color: #ffffff !important;
   }
 
-  .VideoOverlayClose {
-    cursor: pointer;
+  .VideoOverlayClose,
+  .CloseButton {
     position: fixed;
     z-index: 1000;
     top: 1.3vw;
@@ -157,8 +168,9 @@
     margin: 0 !important;
     background-color: #ffffff;
   }
-  .VideoOverlayClose {
-    cursor: pointer;
+
+  .VideoOverlayClose,
+  .CloseButton {
     position: fixed;
     z-index: 1041;
     top: 3vw;
